[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/PlaceholderEnemy2.gd" type="Script" id=1]
[ext_resource path="res://Sprites/rat.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 4 )

[node name="PlaceholderEnemy2" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 1, 4 )
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="HitTimer" type="Timer" parent="."]
process_mode = 0

[connection signal="area_entered" from="Hitbox" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_Hitbox_body_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
